# BATSim

./: .copier-answers.yml  .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  index.json  info.json  pyproject.toml  regressions.xml  requirements.txt  setup.cfg  setup.py  test_c_layer.ipynb
.github/workflows/: publish_to_pypi.yml  smoke-test.yml  testing-and-coverage.yml  testing.yml
_results/: benchmarks.json
_results/gh-runner/: 0330e303-virtualenv-py3.10-Cython-build-packaging.json  24fb83ed-virtualenv-py3.10-Cython-build-packaging.json  38cd56b0-virtualenv-py3.10-Cython-build-packaging.json  390b0821-virtualenv-py3.10-Cython-build-packaging.json  3df18c57-virtualenv-py3.10-Cython-build-packaging.json  444cd586-virtualenv-py3.10-Cython-build-packaging.json  5052b748-virtualenv-py3.10-Cython-build-packaging.json  50aa0fa7-virtualenv-py3.10-Cython-build-packaging.json  51224979-virtualenv-py3.10-Cython-build-packaging.json  58dbee9a-virtualenv-py3.10-Cython-build-packaging.json  610fb23b-virtualenv-py3.10-Cython-build-packaging.json  (+30 more)
batsim/: simulate.py  stamp.py  transforms.py
benchmarks/: asv.conf.json  benchmarks.py  debug_benchmrks.ipynb
docs/: conf.py  index.rst
notebooks/: IA_beyond_affine_example.ipynb  WCS_FD.ipynb  beyond_affine_example.ipynb  constant_shear_test.ipynb  constant_shear_unittest_galsim.ipynb  debug_tests.ipynb  radial_IA_example.ipynb  test_radial_measurment.ipynb
src/: _gsinterface.cpp
tests/: debug_tests.ipynb  test_affine_galsim.py  test_affine_shear.py  test_c_layer.py  test_convolve.py  test_ia_shear.py
(+37 files in other folders)
