[build-system]
requires = [
    "setuptools>=62", # Used to build and package the Python project
    "setuptools_scm>=6.2", # Gets release version from git. Makes it available programmatically
    "pybind11>=2.8", # Builds python - cpp interface for direct calls to galsim cpp layer
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.pybind11_extension]
sources = ["src/batsim/_gsinterface.cpp"]

[tool.setuptools_scm]
write_to = "src/batsim/_version.py"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.coverage.run]
omit=["src/batsim/_version.py"]