[build-system]
requires = [
    "setuptools>=38", # Used to build and package the Python project
    "pybind11>=2.2", # Builds python - cpp interface for direct calls to galsim cpp layer
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
addopts = "-vv -s"

[tool.black]
line-length = 110
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 110
