[build-system]
requires = [
  "setuptools>=61",
  "wheel",
  "pybind11>=2.2",
  "numpy"
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-vv -s"

[tool.black]
line-length = 110
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 110